--- a/src/components/sequenceButton/sequenceButton.css
+++ b/src/components/sequenceButton/sequenceButton.css
@@ -1,93 +1,104 @@
 .sequence-container {
-    /* border: 2px solid yellow; */
-    position: relative;
-    z-index: 10;
+  /* border: 2px solid yellow; */
+  position: relative;
+  z-index: 10;
 }
 
 .sequence-button {
 
-    --letter-height: 20px;
-    cursor: pointer;
-    font-size: var(--letter-height);
-    border: 2px solid blue;
-    color: black;
-    background-color: white;
-    width: 120px;
-    height: 50px;
-    border-radius: 10px;
-    transition: background-color 0.25s;
-
-    position: relative;
-    z-index: 5000;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  --letter-height: 20px;
+  cursor: pointer;
+  font-size: var(--letter-height);
+  color: white;
+  width: 120px;
+  height: 50px;
   
-  .sequence-button:hover {
-    background-color: rgb(223, 223, 223);
-  }
+  position: relative;
+  z-index: 5000;
   
-  .hidden-box {
-    /* border: 2px solid red; */
-    overflow: hidden;
-    display: inline-block;
-  }
-
-  .letter {
-    display: inline-block;
-    position: relative;
-    height: var(--letter-height);
-    /* color: blue; */
-
-  }
-
-  .letter::after {
-    content: attr(data-letter);
-    position: absolute;
-    height: var(--letter-height);
-    left: 0;
-    top: 100%;
-    /* color: red; */
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
+  border: none;
+  background-color: transparent;
+}
 
-  .sparkle-container {
-    /* border: 2px solid green; */
-    pointer-events: none;
 
-    position: absolute;
-    z-index: 0;
+.hidden-box {
+  /* border: 2px solid red; */
+  overflow: hidden;
+  display: inline-block;
+}
 
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    /* transform: translate(-50%, -50%); */
-    display: block;
-  }
+.letter {
+  display: inline-block;
+  position: relative;
+  height: var(--letter-height);
+  /* color: blue; */
 
-  .sparkleStar {
+}
 
+.letter::after {
+  content: attr(data-letter);
+  position: absolute;
+  height: var(--letter-height);
+  left: 0;
+  top: 100%;
+  /* color: red; */
+}
+
+
+.sparkle-container {
+  /* border: 2px solid green; */
+  pointer-events: none;
+
+  position: absolute;
+  z-index: 0;
+
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  /* transform: translate(-50%, -50%); */
+  display: block;
+}
+
+.sparkleStar {
+  /* border: 2px solid magenta; */
+  color: white;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  z-index: -10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+.starPath {
+  fill: #ffff9c;
+}
+
+
+/* old for SVG */
+/* .sparkleStar {
     position: absolute;
     z-index: -10;
-
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
-    
   }
-
   .starPath {
     fill: #ffff9c;
-  }
+  } */
 
 
 
-  
-  /* .sr-only {
+/* accessability */
+/* .sr-only {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -101,4 +112,41 @@
     border: 2px solid red;
     display: inline-block
   } */
-  
+
+
+
+.sequence-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: all 0.25s;
+  opacity: 1;
+}
+
+.sequence-button:hover::before {
+  opacity: 0;
+  transform: scale(0.5, 0.5);
+}
+
+.sequence-button::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.25s;
+  border: 1px solid rgba(255, 255, 255, 0.35);
+  transform: scale(1.2, 1.2);
+}
+.sequence-button:hover::after {
+  opacity: 1;
+  transform: scale(1, 1);
+}
